Añadir más tipos de datos al reporte

--- a/Formato.html
+++ b/Formato.html
@@ -76,5 +76,59 @@
             <th>%ciudad10cant%</th>
         </tr>
     </table>
+    <p>Ciudades que más reciben</p>
+    <table>
+        <tr>
+            <th>Ciudad</th>
+            <th>Envios</th>
+        </tr>
+        <tr>
+            <th>%ciudad11%</th>
+            <th>%ciudad11cant%</th>
+        </tr>
+        <tr>
+            <th>%ciudad12%</th>
+            <th>%ciudad12cant%</th>
+        </tr>
+        <tr>
+            <th>%ciudad13%</th>
+            <th>%ciudad13cant%</th>
+        </tr>
+        <tr>
+            <th>%ciudad14%</th>
+            <th>%ciudad14cant%</th>
+        </tr>
+        <tr>
+            <th>%ciudad15%</th>
+            <th>%ciudad15cant%</th>
+        </tr>
+    </table>
+    <p>Ciudades que menos reciben</p>
+    <table>
+        <tr>
+            <th>Ciudad</th>
+            <th>Envios</th>
+        </tr>
+        <tr>
+            <th>%ciudad16%</th>
+            <th>%ciudad16cant%</th>
+        </tr>
+        <tr>
+            <th>%ciudad17%</th>
+            <th>%ciudad17cant%</th>
+        </tr>
+        <tr>
+            <th>%ciudad18%</th>
+            <th>%ciudad18cant%</th>
+        </tr>
+        <tr>
+            <th>%ciudad19%</th>
+            <th>%ciudad19cant%</th>
+        </tr>
+        <tr>
+            <th>%ciudad20%</th>
+            <th>%ciudad20cant%</th>
+        </tr>
+    </table>
 </body>
 </html>
