--- a/temp.html
+++ b/temp.html
@@ -22,7 +22,7 @@
             <th>631.7 millas</th>
         </tr>
     </table>
-    <p>Destinos más populares</p>
+    <p>Ciudades que más envían</p>
     <table>
         <tr>
             <th>Ciudad</th>
@@ -49,7 +49,7 @@
             <th>345</th>
         </tr>
     </table>
-    <p>Destinos menos populares</p>
+    <p>Ciudades que menos envían</p>
     <table>
         <tr>
             <th>Ciudad</th>
@@ -74,6 +74,60 @@
         <tr>
             <th>GEG</th>
             <th>31</th>
+        </tr>
+    </table>
+    <p>Ciudades que más reciben</p>
+    <table>
+        <tr>
+            <th>Ciudad</th>
+            <th>Envios</th>
+        </tr>
+        <tr>
+            <th>LAS</th>
+            <th>665</th>
+        </tr>
+        <tr>
+            <th>MDW</th>
+            <th>585</th>
+        </tr>
+        <tr>
+            <th>PHX</th>
+            <th>540</th>
+        </tr>
+        <tr>
+            <th>BWI</th>
+            <th>459</th>
+        </tr>
+        <tr>
+            <th>OAK</th>
+            <th>393</th>
+        </tr>
+    </table>
+    <p>Ciudades que menos reciben</p>
+    <table>
+        <tr>
+            <th>Ciudad</th>
+            <th>Envios</th>
+        </tr>
+        <tr>
+            <th>CRP</th>
+            <th>9</th>
+        </tr>
+        <tr>
+            <th>JAN</th>
+            <th>20</th>
+        </tr>
+        <tr>
+            <th>AMA</th>
+            <th>23</th>
+        </tr>
+        <tr>
+            <th>HRL</th>
+            <th>23</th>
+        </tr>
+        <tr>
+            <th>MAF</th>
+            <th>26</th>
         </tr>
     </table>
 </body>
