--- a/temp.html
+++ b/temp.html
@@ -10,6 +10,8 @@
     <img src="./primera.png">
     <h3>Cantidad de entregas por tiempo de demora</h3>
     <img src="./segunda.png">
+    <h3>Cantidad de entregas por día de la semana</h3>
+    <img src="./tercera.png">
 
     <p>Datos Generales:</p>
     <table>
