Crear imagen a partir de html
Crear imagen para luego utilizarla en intregracion a discord

--- a/temp.html
+++ b/temp.html
@@ -7,11 +7,11 @@
 <body>
     <h1>Resumen mensual de Febrero</h1>
     <h3>Porcentaje de entregas a tiempo</h3>
-    <img src="./primera.png">
+    <img src="C:\Users\Johan\Documents\Samsung\Amo-los-lunes\primera.png">
     <h3>Cantidad de entregas por tiempo de demora</h3>
-    <img src="./segunda.png">
+    <img src="C:\Users\Johan\Documents\Samsung\Amo-los-lunes\segunda.png">
     <h3>Cantidad de entregas por día de la semana</h3>
-    <img src="./tercera.png">
+    <img src="C:\Users\Johan\Documents\Samsung\Amo-los-lunes\tercera.png">
 
     <p>Datos Generales:</p>
     <table>
