Cambiar path relativo a path del sistema

--- a/Formato.html
+++ b/Formato.html
@@ -34,11 +34,15 @@
     <div class="grid-container">
         <div>
             <h3>Porcentaje de entregas a tiempo</h3>
-            <img src="./primera.png">
+            <img src="C:\Users\Johan\Documents\Samsung\Amo-los-lunes\primera.png">
         </div>
         <div>
             <h3>Cantidad de entregas por tiempo de demora</h3>
-            <img src="./segunda.png">
+            <img src="C:\Users\Johan\Documents\Samsung\Amo-los-lunes\segunda.png">
+        </div>
+        <div>
+            <h3>Cantidad de entregas por día de la semana</h3>
+            <img src="C:\Users\Johan\Documents\Samsung\Amo-los-lunes\tercera.png">
         </div>
     </div>
 
